yaml/web-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: web-deployment
  namespace: web

spec:
  replicas: 3 
  template:
    metadata:
      labels:
        component: wishlist-app
    spec:
      volumes:
      - name: log-data
        persistentVolumeClaim: 
          claimName: log-data-volume-claim
      - name: nginx-data
        emptyDir: {}
      containers:
        - name: wishlist-app-container
          image: andj712/lista-zelja:v1
          volumeMounts:
            - mountPath: /var/log/nginx
              name: nginx-data
          ports:
          - containerPort: 80
        - name: nginx-instance
          image: nginx
          volumeMounts:
            - mountPath: /var/log/nginx
              name: nginx-data        
          ports:
          - containerPort: 8081          
        - name: copy-data 
          image: ubuntu  
          command: ["/bin/sh", "-c"]
          args:
          - >
            while true;
            do
              sleep 30
              cp /home/data/access.log /home/logs/access.log             
            done        
          volumeMounts:    
            - name: log-data
              mountPath: /home/logs
            - name: nginx-data
              mountPath: /home/data
  selector:
    matchLabels:
      component: wishlist-app
